--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ google-cloud-bigquery==3.19.0
 grpcio==1.64.1
 requests~=2.32.2
 v4-client-py==4.0.0
-v4-proto==4.1.3
+v4-proto==5.0.2rc1
+datadog==0.49.1
