--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 google-cloud-bigquery==3.19.0
-grpcio==1.64.1
+grpcio==1.66.0
 requests~=2.32.2
 v4-client-py==4.0.0
-v4-proto==5.0.2rc1
+v4-proto==5.2.2
 datadog==0.49.1
