--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-google-cloud-bigquery==3.19.0
-google-cloud-storage==2.18.2
-grpcio==1.66.0
+google-cloud-bigquery>=3.19.0
+google-cloud-storage>=2.18.2
+grpcio>=1.65.0
 requests~=2.32.2
-v4-client-py==4.0.0
-v4-proto==5.2.2
 datadog==0.49.1
+dydx-v4-client==1.1.2
